--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
   "apiKey": "457d9d42573083a0e3520b04d0469901",
-  "apiEndpoint": "api.openweathermap.org/",
-  "apiWeather": "api.openweathermap.org/data/2.5/weather?"
+  "apiEndpoint": "https://api.openweathermap.org/",
+  "apiWeather": "https://api.openweathermap.org/data/2.5/weather?"
 }
